--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco013/cumco013.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco013/cumco013.component.html
@@ -12,7 +12,7 @@
 
         <!-- Start Table 1 -->
         <p-table [columns]="cols1" [value]="dataTable1" [(selection)]="selectedRowTable1" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable1" [(rows)]="nRowsTable1" [(first)]="pageTable1" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable1" [(rows)]="nRowsTable1" [(first)]="pageTable1" selectionMode="single" [loading]="loading1">
 
 
           <!-- Table Column Width -->
@@ -103,7 +103,7 @@
 
         <!-- Start Table 2 -->
         <p-table [columns]="cols2" [value]="dataTable2" [(selection)]="selectedRowTable2" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable2" [(rows)]="nRowsTable2" [(first)]="pageTable2" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable2" [(rows)]="nRowsTable2" [(first)]="pageTable2" selectionMode="single" [loading]="loading2">
 
 
           <!-- Table Column Width 2 -->
@@ -195,7 +195,7 @@
 
         <!-- Start Table 3 -->
         <p-table [columns]="cols3" [value]="dataTable3" [(selection)]="selectedRowTable3" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable3" [(rows)]="nRowsTable3" [(first)]="pageTable3" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable3" [(rows)]="nRowsTable3" [(first)]="pageTable3" selectionMode="single" [loading]="loading3">
 
 
           <!-- Table Column Width -->
@@ -294,7 +294,7 @@
 
         <!-- Start Table 4 -->
         <p-table [columns]="cols4" [value]="dataTable4" [(selection)]="selectedRowTable4" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable4" [(rows)]="nRowsTable4" [(first)]="pageTable4" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable4" [(rows)]="nRowsTable4" [(first)]="pageTable4" selectionMode="single" [loading]="loading4">
 
 
           <!-- Table Column Width -->
@@ -399,7 +399,7 @@
 
         <!-- Start Table 5 -->
         <p-table [columns]="cols5" [value]="dataTable5" [(selection)]="selectedRowTable5" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable5" [(rows)]="nRowsTable5" [(first)]="pageTable5" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable5" [(rows)]="nRowsTable5" [(first)]="pageTable5" selectionMode="single" [loading]="loading5">
 
 
           <!-- Table Column Width 5 -->
@@ -490,7 +490,7 @@
 
         <!-- Start Table 6 -->
         <p-table [columns]="cols6" [value]="dataTable6" [(selection)]="selectedRowTable6" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable6" [(rows)]="nRowsTable6" [(first)]="pageTable6" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable6" [(rows)]="nRowsTable6" [(first)]="pageTable6" selectionMode="single" [loading]="loading6">
 
 
           <!-- Table Column Width 6 -->
@@ -581,7 +581,7 @@
 
         <!-- Start Table 7 -->
         <p-table [columns]="cols7" [value]="dataTable7" [(selection)]="selectedRowTable7" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable7" [(rows)]="nRowsTable7" [(first)]="pageTable7" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable7" [(rows)]="nRowsTable7" [(first)]="pageTable7" selectionMode="single" [loading]="loading7">
 
 
           <!-- Table Column Width 7 -->
@@ -671,7 +671,7 @@
 
         <!-- Start Table 8 -->
         <p-table [columns]="cols8" [value]="dataTable8" [(selection)]="selectedRowTable8" [paginator]="true" 
-        [rowsPerPageOptions]="nRowsOptionsTable8" [(rows)]="nRowsTable8" [(first)]="pageTable8" selectionMode="single" >
+        [rowsPerPageOptions]="nRowsOptionsTable8" [(rows)]="nRowsTable8" [(first)]="pageTable8" selectionMode="single" [loading]="loading8">
 
 
           <!-- Table Column Width 8 -->
