--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco016/cumco016.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco016/cumco016.component.html
@@ -101,7 +101,7 @@
 
         <p-pickList id="plt"[source]="sourceRows" [target]="targetRows" sourceHeader="{{ 'CUMCO016.FILTROS.ejes' | translate }}" (onTargetSelect)="onTargetSelect($event)" [showSourceControls]="false" [showTargetControls]="false"
           targetHeader="{{ 'CUMCO016.FILTROS.ejesOrg' | translate }}" [responsive]="true" filterBy="ejeTematico.descripcion" dragdrop="true"
-          [disabled]="this.selectedFile === undefined" (onMoveToSource)="onMoveToSource($event)"
+          [disabled]="this.selectedFile === undefined || this.loading2" (onMoveToSource)="onMoveToSource($event)"
           sourceFilterPlaceholder="{{ 'CUMCO016.FILTROS.placeHolderEjes' | translate }}" targetFilterPlaceholder="{{ 'CUMCO016.FILTROS.placeHolderEjes' | translate }}" [sourceStyle]="{'height':'300px'}" [targetStyle]="{'height':'300px'}">
 
           <ng-template let-row pTemplate="item">
