--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco003/cumco003.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco003/cumco003.component.html
@@ -82,7 +82,7 @@
 
             <!-- Start Table -->
             <p-table [columns]="cols" [value]="rows" [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1"
-              [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectedRows">
+              [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectedRows" [loading]="loading1">
 
               <!-- Table Column Width -->
               <ng-template pTemplate="colgroup" let-columns>
@@ -303,7 +303,7 @@
           <!-- Start Table 2 -->
           <p-table [columns]="cols2" [value]="tablaDocumentos" [paginator]="true" [(rows)]="nRowsTable2"
             [(first)]="pageTable2" [rowsPerPageOptions]="nRowsOptionsTable2" selectionMode="single"
-            [(selection)]="selectedRowDocument">
+            [(selection)]="selectedRowDocument" [loading]="loading2">
 
             <!-- Table Caption 2 -->
             <ng-template pTemplate="caption">
