--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco006/cumco006.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco006/cumco006.component.html
@@ -80,7 +80,7 @@
     <p-messages [(value)]="msgs"></p-messages>
     <!-- Start Table -->
     <p-table [columns]="cols" [value]="listaFestivo" [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1"
-    [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="seleccionFestivo">
+    [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="seleccionFestivo" [loading]="loading1">
 
        <!-- Table Column Width -->
       <ng-template pTemplate="colgroup" let-columns>
