--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco017/cumco017.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco017/cumco017.component.html
@@ -9,7 +9,7 @@
 
             <!-- Start Table 1 -->
             <p-table [columns]="cols1" [value]="dataTable1" [paginator]="true" [(rows)]="nRowsTable1" [(first)]="pageTable1"
-                [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectionTable1">
+                [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectionTable1" [loading]="loading1">
 
                 <!-- Table Column Width -->
                 <ng-template pTemplate="colgroup" let-columns>
@@ -184,7 +184,7 @@
 
             <!-- Start Table 2 -->
             <p-table [columns]="cols2" [value]="dataTable2" [paginator]="true" [(rows)]="nRowsTable2" [(first)]="pageTable2"
-                [rowsPerPageOptions]="nRowsOptionsTable2" selectionMode="single" [(selection)]="selectionTable2">
+                [rowsPerPageOptions]="nRowsOptionsTable2" selectionMode="single" [(selection)]="selectionTable2" [loading]="loading2">
 
                 <!-- Table Column Width -->
                 <ng-template pTemplate="colgroup" let-columns>
